# airpg

./: .coverage  CHANGELOG.md  README.md  dev.py  developer_guide.md  game_instance.py  game_instance_test.py  notes.txt  pyproject.toml  requirements.txt  run_simulations.py  setup.py  test_combat.py
analysis/: battle_simulator.py
combat/: combat_system.py  combatant.py
combat/adapters/: __init__.py  action_resolver_adapter.py  awareness_system_adapter.py  combatant_adapter.py  event_dispatcher_adapter.py  state_manager_adapter.py
combat/interfaces/: __init__.py  action_system.py  awareness.py  combatant.py  events.py  resolvers.py  timing.py
combat/lib/: action_system.py  actions_library.py  awareness_system.py  event_system.py  timing.py
docs/: claude_prompt.md  coding_instructions.md  combat_system_development_guide.md  copilot_dev_plan.md  developer_guide.md  game_document.md  test_execution_guide.md  test_results.md
docs/analysis/: 00_analysis_index.md  01_structural_analysis.md  02_performance_evaluation.md  03_design_patterns.md  04_modularity_testability.md  05_game_mechanics.md  implementation_schedule.md  integration_test_plan.md  optimization_targets.md  requirements_analysis.md
legacy_files/combat/: combat_system.py
legacy_files/combat/lib/: actions_library.py
legacy_files/tests/combat/: test_attack_actions.py  test_combat_system.py  test_defense_actions.py  test_imports.py  test_single.py
scratch/: battle_state.py  combatant.py  main.py
src/common/: constants.py  errors.py
tests/: __init__.py
tests/combat/: __init__.py  conftest.py  mocks.py  run_single_test.py  test_action_resolver_adapter.py  test_action_system.py  test_actions_library.py  test_adapter_integration.py  test_attack_actions.py  test_awareness_system.py  test_battle_init.py  test_battle_replay.py  test_combatant_adapter.py  test_core_integration.py  test_evasion_actions.py  test_event_dispatcher_adapter.py  test_event_system.py  test_movement_actions.py  test_movements.py  test_neutral_actions.py  test_state_manager_adapter.py  test_system_health.py  test_timing.py
(+20 files in other folders)
