[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "airpg"
version = "0.1.0"
authors = [
    { name = "Your Name", email = "your.email@example.com" },
]
description = "A real-time tactical combat RPG system"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Topic :: Games/Entertainment :: Role-Playing",
]

dependencies = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "coverage>=7.3.2",
    "pytest-xdist>=3.0.0",
    "execnet>=2.0.0",  # Add this line
    "mypy>=1.0.0",
    "black>=23.0.0",
    "isort>=5.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest-watch>=4.2.0",
    "pytest-benchmark>=4.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-xdist>=3.0.0",
]

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra -q --cov=src"
testpaths = ["tests"]
pythonpath = [".", "src"]  # Add "." to include the project root
asyncio_default_fixture_loop_scope = "function"  # Add this line

[tool.coverage.run]
source = ["src"]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "pass",
    "raise ImportError",
]

[tool.black]
line-length = 88
target-version = ["py310"]
include = '\.pyi?$'

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 88

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true

[[tool.mypy.overrides]]
module = "pytest.*"
ignore_missing_imports = true